[build] Simplify stubbing for Java 9+ (#2091)