@@ -279,28 +279,10 @@ jar.finalizedBy(downloadBaseline)
 if (JavaVersion.current().java9Compatible) {
   sourceSets {
 	java8stubs.java.srcDirs = ['src/main/java8stubs']
-	java9 {
-	  compileClasspath += main.output
-	  java.srcDirs = ['src/main/java9']
-	}
   }
 
   tasks.withType(JavaCompile).all {
-	if (it == compileJava9Java) {
-	  sourceCompatibility = targetCompatibility = 9
-	  options.compilerArgs.addAll(['--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED'])
-	}
-	else {
 	  sourceCompatibility = targetCompatibility = 8
-	}
-  }
-
-  [jar, jmhJar]*.each {
-	it.from sourceSets.java9.output
-  }
-
-  tasks.withType(Test).all {
-	classpath = sourceSets.java9.output + files(it.classpath)
   }
 
   tasks.withType(Javadoc).all {
